--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 	<title>OpinionShield</title>
 </head>
 <body>
-	<img src="#"/>
-	<h1>Real Customers. Verified reviews.</h1>
-	<h2>The most trustworthy local reviews anywhere online.</h2>
-	<p>Find the best service providers, retailers, restaurants, and stores in your area.</p>
-	<p>Rate your local businesses and servic providers, and help your fellow consumers and businesses</p>
-	<p>Earn rewards for your contributions!</p>
-	<img src="#"/>
-	<h3>Sign up now and get notified when OpinionShield launches.</h3>
-	<input type="email">
-	<button>Get notified</button>
+	<container>
+		<img src="#"/>
+		<h1>Real Customers. Verified reviews.</h1>
+		<h2>The most trustworthy local reviews anywhere online.</h2>
+		<p>Find the best service providers, retailers, restaurants, and stores in your area.</p>
+		<p>Rate your local businesses and servic providers, and help your fellow consumers and businesses</p>
+		<p>Earn rewards for your contributions!</p>
+		<img src="#"/>
+		<h3>Sign up now and get notified when OpinionShield launches.</h3>
+		<input type="email">
+		<button>Get notified</button>
+	</container>
+	<footer>
+		<
+
 	 
 </body>
 </html>
