--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>OpinionShield</title>
 </head>
 <body>
-	<container>
+	<div class="container">
 		<img src="#"/>
 		<h1>Real Customers. Verified reviews.</h1>
 		<h2>The most trustworthy local reviews anywhere online.</h2>
@@ -21,9 +21,9 @@
 		<h3>Sign up now and get notified when OpinionShield launches.</h3>
 		<input type="email">
 		<button>Get notified</button>
-	</container>
+	</div>
 	<footer>
-		<
+		</footer>
 
 	 
 </body>
