--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 </head>
 <body>
 	<div class="container">
-		<img src="#"/>
+		<img class="title" src="#"/>
 		<h1>Real Customers. Verified reviews.</h1>
 		<h2>The most trustworthy local reviews anywhere online.</h2>
 		<p>Find the best service providers, retailers, restaurants, and stores in your area.</p>
 		<p>Rate your local businesses and servic providers, and help your fellow consumers and businesses</p>
 		<p>Earn rewards for your contributions!</p>
-		<img src="#"/>
+		<img class="dots" src="#"/>
 		<h3>Sign up now and get notified when OpinionShield launches.</h3>
 		<input type="email">
 		<button>Get notified</button>
 	</div>
-	<footer>
-		</footer>
+	<div class="float-right">
+		<img class="right"/>
+	<div class="footer">
+		<a href="#">Send us an email</a>
+	</div>
 
 	 
 </body>
